--- a/Interior.css
+++ b/Interior.css
@@ -7,24 +7,19 @@
 
 body
 {
-    background-color: grey;
+    background:rgba(0, 0, 0, 0.3);
     background-repeat: no-repeat;
     height: 100vh;
     background-size: cover;
     background-position: center;
     background-attachment: fixed;
     font-family: sans-serif;
-	height:100%;
-	width:100%
-	margin:0;
-	font-family:'Roboto', sans-serif;
 }
 
 .nav-bar
 {
     width: 100%;
     height: 70px;
-    background-color: grey;
 }
 
 .logo{
@@ -49,7 +44,7 @@ body
 .menu li a
 {
     text-decoration: none;
-    color: white;
+    color: black;
     padding: 5px 10px;
     border-radius: 12px;
     font-family: sans-serif;
@@ -103,89 +98,47 @@ li.dropdown {
     display: block;
 }
 
-.container{
-	max-width:1200px;
-	margin:0 auto;
-	padding:15px;
-	display:flex;
+.about_area{
+    float: left;
+    display: inline;
+    width: 100%;
+    min-height: 200px;
 }
-.left-column{
-	width:65%;
-	position:relative;
-}
-.right-column{
-	width:35%;
-	margin-top:60px;
-}
-.left-column img{
-	width:75%;
-	position:absolute;
-	left:0;
-	top:0;
-	opacity:0;
-	transition:all 0.3s ease;
-}
-.left-column img.active{
-	opacity:1;
-}
-.product-description{
-border-bottom:1px solid #E1E8EE;
-margin-bottom:20px;
+.heading{
+    float: left;
+    display: inline;
+    width: 100%;
 }
 
-.product-description h1{
-	font-wight:300;
-	font-size: 40px;
-	color:#43484D;
-	letter-spacing: -2px;
+.heading p{
+    color: black;
+    margin: 10px;
+    font-size: 50px;
+    text-align: center;
+    letter-spacing: 3px;
+     font-family:Bradley Hand ITC;
 }
-.product-description p{
-	font-size:16px;
-	font-weight:300;
-	color:black;
-	line-height: 24px;
+
+div.gallery {
+    margin: 5px;
+    border: 1px solid #ccc;
+    float: left;
+    width: 272px;
 }
-.product-price{
-	display:flex;
-	align-items:center;
+
+div.gallery:hover {
+    border: 1px solid #777;
 }
-.product-price span{
-	font-size:26px;
-	font-weight:300;
-	color:#43474D;
-	margin-right:20px;
+
+div.gallery img {
+    width: 100%;
+    height: 200px;
 }
-.cart-btn{
-	background-color:grey;
-	border-radius:6px;
-	color:#FFFFFF;
-	text-decoration:none;
-	padding:12px 30px;
-	transition:all .5s;
-}
-.cart-btn:hover{
-	background-color:#66bbf1;
-}
-/*RESPONSIVE*/
-@media(max-width:940px){
-	.container{
-		flex-direction:column;
-		margin-top:60px;
-	}
-	.left-column,
-	.right-column{
-		width:100%;
-	}
-	.left-column img{
-		width:300px;
-		right:0;
-		top:-65px;
-		left:initial;
-	}
-}
-@media(max-width:535px){
-	.left-column img{
-		width:220px;
-		top:-85px;
-	}
+
+div.desc {
+    color: black;
+    padding: 15px;
+    text-align: center;
+    font-size: 20px;
+    font-family: sans-serif;
 }
