--- a/Art.css
+++ b/Art.css
@@ -7,7 +7,7 @@
 
 body
 {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.0),rgba(0, 0, 0, 0.4)),url(gambar/art/bg.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)),url(gambar/art/bg.jpg);
     background-repeat: no-repeat;
     height: 100vh;
     background-size: cover;
@@ -115,6 +115,7 @@ li.dropdown {
     margin: 10px;
     font-size: 50px;
     text-align: center;
+    letter-spacing: 3px;
      font-family:Bradley Hand ITC;
 }
 
@@ -135,7 +136,7 @@ div.gallery img {
 }
 
 div.desc {
-    color: black;
+    color: white;
     padding: 15px;
     text-align: center;
     font-size: 20px;
