--- a/art2.css
+++ b/art2.css
@@ -12,6 +12,7 @@ body
     height: 100vh;
     background-size: cover;
     background-position: center;
+    background-attachment: fixed;
     font-family: sans-serif;
 }
 
