--- a/konsultasi.css
+++ b/konsultasi.css
@@ -123,6 +123,7 @@ p{
 {
     font-size: 20px;
     letter-spacing: 2px;
+    margin: 5px;
     padding: 7px 10px;
     text-decoration: none;
     border: 2px solid #fff;
@@ -148,7 +149,7 @@ input[type=submit]{
     margin: 5px;
     padding: 7px 10px;
     text-decoration: none;
-    border: 1px solid #fff;
+    border: 2px solid #fff;
     border-radius: 10px;
     font-family: sans-serif;
     color: black;
