--- a/Art.css
+++ b/Art.css
@@ -7,7 +7,7 @@
 
 body
 {
-    background-image:linear-gradient(rgba(0, 0, 0, 0.3),rgba(0, 0, 0, 0.3)),url(gambar/art/bg.jpg);
+    background-image:linear-gradient(rgba(0, 0, 0, 0.5),rgba(0, 0, 0, 0.5)),url(gambar/art/bg.jpg);
     background-repeat: no-repeat;
     height: 100vh;
     background-size: cover;
@@ -121,13 +121,13 @@ li.dropdown {
 
 div.gallery {
     margin: 5px;
-    border: 1px solid #ccc;
+    border: 1px solid black;
     float: left;
     width: 272px;
 }
 
 div.gallery:hover {
-    border: 1px solid #777;
+    border: 1px solid #fff;
 }
 
 div.gallery img {
