--- a/color.css
+++ b/color.css
@@ -95,12 +95,12 @@ li.dropdown {
     display: block;
 }
 
-h2{
+.h2{
     position: relative;
     text-align: center; 
     color: white;
     top: 200px;
-    font-size: 50px;
+    font-size: 40px;
     margin: 25px;
     font-family:Bradley Hand ITC;
 }
